package(default_visibility=["//visibility:public"])
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@npm_bazel_typescript//:index.bzl", "ts_library")

exports_files(["tsconfig.json"], visibility = ["//visibility:public"])

ts_library(
    name = "main",
    srcs = glob(["app.js", "lib/**/*.js]),
)

nodejs_binary(
    name = "app",
    data = [":main"],
    entry_point = ":app.js",
)
